--- a/studying/src/main/resources/application.properties
+++ b/studying/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#设置连接数据库的配置
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/njsjdxjs?serverTimezone=Asia/Shanghai
+spring.datasource.password=n33rDF5nrFjkeceD
+spring.datasource.username=njsjdxjs
